# browserland

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  broker_config.example.json  broker_config.linux.example.json  every_feature.md  feature_loop.md  pyproject.toml  status.md
docs/: PROFILES.md  SETUP.md  TECHNICAL.md  UPGRADING.md
docs/media/: README.md
launchers/: run-agent.bat  run-agent.ps1  run-agent.sh  run-broker.ps1  run-broker.sh
launchers/systemd/: webterm-agent.service  webterm-broker.service
tests/: auth_helpers.py  conftest.py  fake_broker.py  test_agent_auth_reject.py  test_altscreen.py  test_auth_mandatory.py  test_auth_nonloopback.py  test_backend_kill_fallback.py  test_backend_procs.py  test_broker_e2e.py  test_broker_info.py  test_conpty.py  test_detect.py  test_env_util.py  test_file_api.py  test_git_status.py  test_help_corpus.py  test_integration.py  test_linux_pty.py  test_mcp_flush.py  test_mcp_pace.py  test_mcp_read.py  test_mcptool.py  test_profiles_config.py  test_protocol.py  test_pyte_snap.py  test_recording.py  test_recscan.py  test_registry_agent.py  test_ringbuf.py  test_snapshot_raw.py  test_status_fetch.py  test_textgrid.py  test_titles.py  test_ui_assets.py  test_vendor_assets.py
webterm/: __init__.py  protocol.py
webterm/agent/: __main__.py  agent.py  altscreen.py  cli.py  client.py  config.py  detect.py  env_util.py  git_status.py  ringbuf.py  titles.py
webterm/agent/backends/: __init__.py  base.py  linux_pty.py  (+1 more)
webterm/broker/: 00_head.html  10_css_root.css  11_css_apps.css  12_css_help.css  13_css_tiling.css  14_css_dragdrop.css  15_css_dialogs.css  40_body.html  50_js_constants.js  51_js_prefs.js  52_js_state_sync.js  53_js_remote_host_cache.js  54_js_app_windows_store.js  55_js_settings_model.js  56_js_hosts.js  57_js_tiling_model.js  58_js_layout_mutators.js  59_js_tiled_drag.js  60_js_strip_engine.js  61_js_resize_gutters.js  62_js_workspaces.js  63_js_clipboard_auth.js  64_js_sessions_poll_control.js  65_js_display_theming.js  66_js_notices_zorder.js  67_js_window_lifecycle.js  68_js_app_windows_files.js  69_js_dialog.js  70_js_browse_pane.js  70_js_editor_app.js  71_js_file_manager.js  72_js_task_manager.js  73_js_window_runtime.js  74_js_drag_resize.js  75_js_taskbar_hosts.js  76_js_launch_fullscreen.js  77_js_context_menu.js  78_js_keybindings.js  79_js_settings_modal.js  80_js_help_window.js  (+19 more)
webterm/mcptool/: README.md  __init__.py  __main__.py  client.py  server.py
wiki/: Arranging-Windows.md  Columns-and-Widths.md  Context-Menus.md  Floating-Window-Controls.md  Getting-Started.md  Home.md  Hosts-and-Multi-Browser.md  Keyboard-Shortcuts.md  MCP-and-AI-Agents.md  Snapping-and-Pop-out.md  Taskbar.md  Window-Modes.md  Window-Types.md  Workspaces.md  _Footer.md  _Sidebar.md
(+52 files in other folders)
